cmake_minimum_required(VERSION 3.17)

# Set the project name
set(PROJECT_NAME "CookieBoost")
project(${PROJECT_NAME})

# Language standard
enable_language(C CXX)

# CXX standard
set(CMAKE_CXX_STANDARD 11)

# Set the root path
set(COOKIE_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

# Include
include(cmake/utils.cmake)

# Specify the project version
set(COOKIE_VERSION_MAJOR 1)
set(COOKIE_VERSION_MINOR 0)
set(COOKIE_VERSION_PATCH 0)
set(COOKIE_VERSION_BUILD 0)
set(COOKIE_VERSION "${COOKIE_VERSION_MAJOR}.${COOKIE_VERSION_MINOR}.${COOKIE_VERSION_PATCH}.${COOKIE_VERSION_BUILD}")
configure_file(${COOKIE_ROOT_PATH}/version.h.in ${COOKIE_ROOT_PATH}/include/version.h @ONLY)

# Options
## Common
option(ENABLE_COOKIE_BOOST_BUILD_SHARED "ENABLE_COOKIE_BOOST_BUILD_SHARED" ON)
option(ENABLE_COOKIE_BOOST_BASE "ENABLE_COOKIE_BOOST_BASE" ON)

## Device
option(ENABLE_COOKIE_BOOST_DEVICE_HOST "ENABLE_COOKIE_BOOST_DEVICE_HOST" ON)
option(ENABLE_COOKIE_BOOST_DEVICE_CUDA "ENABLE_COOKIE_BOOST_DEVICE_CUDA" OFF)
option(ENABLE_COOKIE_BOOST_DEVICE_OPENCL "ENABLE_COOKIE_BOOST_DEVICE_OPENCL" OFF)

## ISA
option(ENABLE_COOKIE_BOOST_X86 "ENABLE_COOKIE_BOOST_X86" OFF)
option(ENABLE_COOKIE_BOOST_ARM "ENABLE_COOKIE_BOOST_ARM" OFF)
option(ENABLE_COOKIE_BOOST_ASM "ENABLE_COOKIE_BOOST_ASM" OFF)

## Tools
option(ENABLE_COOKIE_BOOST_TIME_PROFILE "ENABLE_COOKIE_BOOST_TIME_PROFILE" ON)

# Install & target path
if(NOT DEFINED COOKIE_BOOST_INSTALL_PATH)
    set(COOKIE_BOOST_INSTALL_PATH ${COOKIE_ROOT_PATH}/build/install)
endif()
set(COOKIE_BOOST_INSTALL_INCLUDE_PATH ${COOKIE_BOOST_INSTALL_PATH}/include)
set(COOKIE_BOOST_INSTALL_LIBS_PATH ${COOKIE_BOOST_INSTALL_PATH}/libs/${CMAKE_SYSTEM_NAME}/${COOKIE_BOOST_ARCH_NAME}/lib/${CMAKE_BUILD_TYPE})
if(SYSTEM.Windows)
    set(COOKIE_BOOST_INSTALL_BINS_PATH ${COOKIE_BOOST_INSTALL_PATH}/libs/${CMAKE_SYSTEM_NAME}/${COOKIE_BOOST_ARCH_NAME}/bin/${CMAKE_BUILD_TYPE})
else()
    set(COOKIE_BOOST_INSTALL_BINS_PATH ${COOKIE_BOOST_INSTALL_LIBS_PATH})
endif()

set(COOKIE_BOOST_TARGET_PATH ${COOKIE_ROOT_PATH}/build/target/${CMAKE_SYSTEM_NAME})
set(COOKIE_BOOST_TARGET_LIB_PATH ${COOKIE_BOOST_TARGET_PATH}/lib/${CMAKE_BUILD_TYPE})
set(COOKIE_BOOST_TARGET_BIN_PATH ${COOKIE_BOOST_TARGET_PATH}/bin/${CMAKE_BUILD_TYPE})

# Build type
if(ENABLE_COOKIE_BOOST_BUILD_SHARED)
    set(COOKIE_BOOST_BUILD_TYPE SHARED)
else()
    set(COOKIE_BOOST_BUILD_TYPE STATIC)
endif()



